--- a/Projects/index.html
+++ b/Projects/index.html
@@ -5,6 +5,7 @@
     <title>Hello Coursera!</title>
   </head>
   <body>
-  <h1>Hello Coursera! It's a great course!</h1>  
+  <h1>Hello Coursera! It's a great course! Making edit #1 for browser sync</h1>
+  <p>Test edit #2</p>  
   </body>
 </html>
