background color change

--- a/coursera_projects/mod3_solution/index.html
+++ b/coursera_projects/mod3_solution/index.html
@@ -45,7 +45,7 @@
     </nav>
   </header>
 
-  <div id="main-content" class="container col-md-12 col-sm-12 col-xs-12">
+  <div id="main-content" class="container col-xs-12">
     <h2 class="text-center">Our Menu</h2>
 
     <div id="chicken">
