made changes to Lecture 53 practice code

--- a/coursera_projects/Coursera_Lecture_Practice/Lecture53.html
+++ b/coursera_projects/Coursera_Lecture_Practice/Lecture53.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>BlueLB84 Coursera Lecture Practice</title>
+    <script src="Lecture53.js"></script> <!-- Able to move this script to the top because in JS, the listing event DOMContentLoaded was added. -->
   </head>
   <body>
   <h1 id="title">Lecture 53</h1>
 
   <p>Say hello to
     <input id="name" type="text">
-    <button onclick="sayHello()">
+    <button>  <!-- onclick="sayHello();" / an optional way to add an event-->
       Say it!
     </button>
   </p>
 
   <div id="content"></div>
-  <script src="Lecture53.js"></script>
+
   </body>
 </html>
